# pybar

./: .gitignore  AGENTS.md  LICENSE  bar.py  cache.py  calendar_widget.py  clock.py  clock_module.py  common.py  config.py  credentials.py  git_widget.py  hoyo_widget.py  ipc.py  main.py  makefile  module.py  modules.py  privacy_widget.py  pulse.py  pybar-appimage.spec  pybar.spec  pyproject.toml  readme.md  requirements.txt  style.css  sway.py  sway_module.py  updates_widget.py  ups_widget.py  version.py  volume_widget.py  waybar.py  waybar_cache.py  waybar_module.py  weather_widget.py  widgets.py
common/: __init__.py  base_module.py  drawing.py  fonts.py  helpers.py  screenshot.py  state.py  volume_slider.py  widgets.py
docs/: go.mod  hugo.yaml
modules/: async.py  backlight.py  battery.py  clock.py  cpu.py  custom.py  debug.py  disks.py  docker.py  docker2.py  git.py  hass.py  hass_2.py  hass_dashboard.py  hass_lovelace.py  hass_sensor.py  hypr.py  icon.py  libvirt.py  memory.py  mockup.py  mode.py  mpc.py  mpris.py  network.py  nvtop.py  obs.py  power.py  power_menu.py  power_supply.py  privacy.py  pulse.py  resin.py  rocm.py  sales.py  sway.py  sway_new.py  systemd.py  test.py  toggle.py  (+11 more)
modules_waybar/: common.py  git.py  git_2.py  hass.py  hoyo.py  network.py  obs.py  power_supply.py  privacy.py  resin.py  sales.py  systemd-failed.py  systemd.py  tooltip.py  transmission.py  updates.py  upower.py  ups.py  vm.py  weather.py  xdrip.py
pybar/: cache.py  common.py  main.py  module.py
scripts/: pybar-memsnap
settings/: __init__.py  schema.py  window.py
(+51 files in other folders)
