[tool.poetry]
name = "pybar"
version = "0.1.0"
description = "GTK3 statusbar for Sway with widgets"
authors = ["Jack Reitano"]
license = "MIT"
readme = "readme.md"

[tool.poetry.scripts]
pybar = "pybar.main:main"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
aiosignal = "^1.3.1"
annotated-types = "^0.6.0"
attrs = "^23.2.0"
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
configparser = "^7.0.0"
frozenlist = "^1.4.1"
genshin = "^1.6.3"
hid = "^1.0.6"
idna = "^3.7"
multidict = "^6.0.5"
pulsectl = "^24.4.0"
pycairo = "^1.26.0"
pydantic = "^2.7.1"
pydantic_core = "^2.18.2"
PyGObject = "^3.48.2"
pypng = "^0.20220715.0"
qrcode = "^7.4.2"
requests = "^2.31.0"
typing_extensions = "^4.11.0"
urllib3 = "^2.2.1"
yarl = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
